<resources>
    <string name="app_name">Github User</string>

    <string name="query_hint">Cari User</string>

    <string name="name">Nama</string>
    <string name="user">Username</string>
    <string name="textfollowing">Following</string>
    <string name="textfollower">Follower</string>
    <string name="textlocation">Location</string>
    <string name="textcompany">Company</string>
    <string name="textrepository">Repository</string>
    <string name="dummy_number">9999</string>
    <string name="github_logo">Github Logo</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="content_tab_follower">Follower</string>
    <string name="content_tab_following">Follower</string>
    <string name="text_follower">Follower</string>
    <string name="text_following">Following</string>
    <string name="clear">Clear Search</string>
    <string name="time_splash">3000</string>
    <string name="status_following">No Following</string>
    <string name="status_follower">No Follower</string>
    <string name="no_search">No search results found</string>

    <string name="actionbar_favorite">Favorite</string>
    <string name="actionbar_setting">Setting</string>
    <string name="favorite_user">favorite user</string>
    <string name="favorite_users_empty">Favorite Users Empty</string>
    <string name="dark_mode">Dark Mode</string>
</resources>